# safety-critical-rust-coding-guidelines

./: .gitignore  .readthedocs.yaml  CNAME  CONTRIBUTING.md  GOALS.md  Makefile  README.html  README.md  REVIEWING.md  _typos.toml  generate_guideline_templates.py  genindex.html  guidelines-ids.json  index.html  needs.json  objects.inv  pyproject.toml  search.html  searchindex.js  smoke-pr-marker-2026-02-10.md  test_update_fls.sh
_static/: fls_links.css  rust_examples.css  rust_playground.css  rust_playground.js
appendices/: index.html  licenses.html  standards-matrices.html
builder/: build_cli.py
coding-guidelines/: associated-items.html  attributes.html  concurrency.html  entities-and-resolution.html  exceptions-and-errors.html  expressions.html  ffi.html  functions.html  generics.html  implementations.html  index.html  inline-assembly.html  macros.html  ownership-and-destruction.html  patterns.html  program-structure-and-compilation.html  statements.html  types-and-traits.html  unsafety.html  values.html
compliance/: compliance-meaning.html  deviation-process.html  index.html
docs/: bibliography.md  fls-audit.md  issue-formatting-guide.md  pr-approval-smoke-test.md  reviewer-bot-review-freshness-operator-runbook.md
exts/: pyproject.toml
overview/: how-to-read.html  index.html  scope.html  versioning.html
process/: guideline-lifecycle.html  index.html  style-guideline.html
retired-guidelines/: index.html  retired-associated-items.html  retired-attributes.html  retired-concurrency.html  retired-entities-and-resolution.html  retired-exceptions-and-errors.html  retired-expressions.html  retired-ffi.html  retired-functions.html  retired-generics.html  retired-implementations.html  retired-inline-assembly.html  retired-macros.html  (+7 more)
(+504 files in other folders)
